--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -2392,154 +2392,90 @@ are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$
     Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
 \end{remark}
 
-
-\Kurt{A necessary condition for any shift description of $(l,n)$-trees would be having a generalised order for it.
-Not sure what an obvious extension of this order would be.
-Can we compute via code what the ordering must be for $\LA$/$\SU$ $(l,n)$-trees for small $l,n$?
-}
+%\Kurt{A necessary condition for any shift description of $(l,n)$-trees would be having a generalised order for it.
+%Not sure what an obvious extension of this order would be.
+%Can we compute via code what the ordering must be for $\LA$/$\SU$ $(l,n)$-trees for small $l,n$?}
 
 %%%%%%%%%%%%%%%
 
 \subsection{Vertices of operadic diagonals}
 
-We are now interested in characterizing the pairs of vertices that occur in the diagonal, that is, pairs of permutations $(\sigma_1,\sigma_2) \in \triangle$. 
+We are now interested in characterizing the vertices (i.e. pairs of permutations) that occur in any operadic diagonal. 
+As in the preceding Section, we study $\LAD$ first, and then transport our results to other operadic diagonals via isomorphisms. 
 
-\begin{theorem} There exists $(I,J) \in D(n)$ such that $\forall k, |\sigma_1^1\cdots\sigma_1^k \cap I| \leq |\sigma_1^1\cdots\sigma_1^k \cap J|$ and $\forall l, |\sigma_1^1\cdots\sigma_1^l \cap I| \geq |\sigma_1^1\cdots\sigma_1^l \cap J|$ (diagonal condition) if and only if $\exists (I',J')=(\{i_1,\ldots,i_m\},\{j_1,\ldots,j_m\}) \in D(m)$, $m\leq n$, such that \[\sigma_1 \cap (I'\cup J')=j_1 i_1 j_2 i_2 \cdots j_n i_n \] and \[ \sigma_2 \cap (I'\cup J') = i_2 j_1 i_3 j_2 \cdots i_n j_{n-1} i_1 j_n \ , \] where $i_1 = \min (I' \cup J')$ (fish condition). 
-\end{theorem}
-
-\begin{proof}
-\begin{itemize}
-\item If a pair of permutations $(\sigma_1, \sigma_2) \in   \mathfrak{S}_N^2$ satisfies the fish condition, then there exist two sets $I$ and $J$ of same cardinality such that $\min(I)<\min(J)$. Denoting $\sigma_1$ and $\sigma_2$ by two words of size $N$ $\sigma_1^1 \ldots \sigma_1^N$ and $\sigma_2^1 \ldots \sigma_2^N$, then the pair $((\sigma_1, \sigma_2), (I,J))$ satisfies that for any $k$ in $\llbracket 1;N\rrbracket$, $|\sigma_1^1 \ldots \sigma_1^k \cap J| \geq |\sigma_1^1 \ldots \sigma_1^k \cap I|$ and $|\sigma_2^1 \ldots \sigma_2^k \cap I| \geq |\sigma_2^1 \ldots \sigma_2^k \cap J|$, hence the diagonal condition.
-\item We will now prove the converse. Let us presume that $(\sigma_1, \sigma_2)$ is a pair of permutations satisfying the diagonal condition for a pair of sets $(I,J) \in D(n)$, minimal for the inclusion of sets.
-\begin{description}
-\item[Case $n=1$] 
-\end{description}
-If $|I|=|J|=1$, then it follows directly from the diagonal condition above that ${\sigma_1}_{| I \cup J}=j_1 i_1$ and ${\sigma_1}_{|I \cup J}=i_1 j_1$, hence the fish condition is satisfied.
-\begin{description}
-\item[Case $n>1$] 
-\end{description}
-In this case, the proof is made by absurdum 
-by considering the number of "well-placed" elements of $I$ and $J$ in $\sigma_1$ and $\sigma_2$. In what follows, for any set $E$, $\sigma^{E}_i$ will stands for $(\sigma_i)_{|E}$. We write also $n_{i,k}^E$ for the number of elements of $E$ in the $k$ first letters of $\sigma_i$. The main argument in each of the small proofs below is the same: if the permutations do not satisfy the pattern described above, then it is possible to find an appropriate pair of elements $(i,j)\in I \times J$ such that $(I-i,J-j)$ satisfies the diagonal condition, hence  contradicting the minimality of $(I,J)$.
-
-We first prove that the leftmost element of $\sigma^{I}_1$ is $i_1$. Indeed, if it is not the case, we consider $i$, the leftmost element in $\sigma^{I}_1$ and $j$ the leftmost element in $\sigma^{J}_2$. The pair $(I-i,J-j)$ is in $D(n-1)$, as $i$ is different from $i_1$. Moreover, it is clear that the diagonal condition still holds for $((\sigma_1, \sigma_2), (I,J))$. As this would contradict the minimality of $(I,J)$, the leftmost element of $\sigma^{I}_1$ is $i_1$.
-
-We then prove that $\sigma^{I \cup J}_1$ starts by $j_1 i_1$ and that this $j_1$ is exactly the leftmost element in  $\sigma^{J}_2$. On that purpose, we suppose that either  $i_1$ is preceeded by several elements of $J$ or that the unique element of $J$ is not the leftmost one in $\sigma^{J}_2$. We then adapt the previous argument by choosing $i$ to be the leftmost element in $\sigma^{I-\{i_1\}}_1$ and $j$ the leftmost element in $\sigma^{J}_2$. The pair $(I-i,J-j)$ is in $D(n-1)$. Let us briefly explain while  the diagonal condition would still be fulfilled in this case. If $j$ is after $i_1$ in $\sigma_1$, then the difference $n_{1,k}^{J-j}-n_{1,k}^{I-i}$ is greater than $n_{1,k}^{J}-n_{1,k}^{I}$ for any $k$, hence is non negative. If $j$ is before $i_1$ in $\sigma_1$, then by hypothesis, the difference $n_{1,k}^{J-j}-n_{1,k}^{I-i}$ is:
-\begin{itemize}
-\item strictly positive before $i_1$ an greater than $1$ just before $i_1$
-\item non negative after $i_1$
-\item increase between $i_1$ and $i$
-\item is equal to $n_{1,k}^{J}-n_{1,k}^{I}$ after $i$,
-\end{itemize} 
-hence is always non negative.
-Moreover, if $i$ is after $j$ in $\sigma_2$, the diagonal condition is clearly satisfied. If $i$ is before $j$, then the difference $n_{2,k}^{I-i}-n_{1,k}^{J-j}$ is:
-\begin{itemize}
-\item strictly positive before $j$ an greater than $1$ just before $j$
-\item is equal to $n_{2,k}^{I}-n_{1,k}^{J}$ after $j$,
-\end{itemize} 
-hence is always non negative. In short, if $i_1$ is preceeded by several elements of $J$ or the unique element of $J$ is not the leftmost one in $\sigma^{J}_2$, we obtain a contradiction with the minimality of $(I,J)$.
-
-Let us now consider the biggest $k\geq 1$ such that $\sigma^{I \cup J}_1$ begins with $j_1 i_1 j_2 i_2 \ldots j_k i_k$ and $\sigma^{I \cup J}_2$ begins with $i_2 j_1 i_3 j_2\ldots i_k j_{k-1} w j_k$, where $w$ is a word with letters in $I$. We want to show that $k=n$. Let us first remark that if $k=n$, $w=i_1$. If $1\leq k<n$, then the sets $\tilde{I}=I-\{i_1, \ldots, i_k\}$ and $\tilde{J}=J-\{j_1, \ldots, j_k\}$ are non empty. Let us choose $i_{k+1}$ to be the leftmost element in $\sigma^{\tilde{I}}_1$ and $j_{k+1}$ the leftmost element in $\sigma^{\tilde{J}}_2$. We thus have $\sigma^{I \cup J}_1=j_1 i_1 j_2 i_2 \ldots j_k i_k w' i_{k+1}\ldots$, where $w'$ is in $J$ and $\sigma^{I \cup J}_2= i_2 j_1 i_3 j_2\ldots i_k j_{k-1} w j_k w'' j_{k+1}\ldots $, where $w$ and $w'$ are words with letters in $I$. The pair $(I-i_{k+1},J-j_{k+1})$ is in $D(n-1)$. Following the study as in the previous case, $\sigma_1$ always satisfies the diagonal condition for $(I-i_{k+1},J-j_{k+1})$ and $\sigma_2$ satisfies it if and only if $w \neq i$. By minimality of $(I,J)$, we then have $w=i_{k+1}$. If $k+1=n$, we are done as the only possible word in $J$ is $j_{k+1}$, hence $w'=j_{k+1}$. Otherwise, we can choose $i_{k+2}$ to be the leftmost element in $\sigma_1^{\tilde{I}-i_{k+1}}$. Using the same reasoning as above, we show that $((\sigma_1, \sigma_2),(I-i_{k+2},J-j_{k+1}))$ satisfies the diagonal condition if and only if $w'\neq j_{k+1}$. To sum up, the only possibility for $(I,J)$ to be minimal is to have $k=n$, which implies the fish condition.
-\end{itemize}
-\end{proof}
-
-\begin{corollary} For any pair of permutations $(\sigma_1, \sigma_2$, there exists $(I,J) \in D(n)$ such that $((\sigma_1, \sigma_2),(I,J))$ satisfies the diagonal condition if and only if there exists $(I',J') \in E(m)$, $m<n$ such that $((\sigma_1, \sigma_2),(I',J'))$ satisfies the fish condition, with 
-\[
-E(m)=\set{(I,J)\in D(m)}{\begin{array}{l} \min(J)<\min(I-\min(I)), \\ |\llbracket 1; k \rrbracket \cap J| > |\llbracket 1; k \rrbracket \cap I| \\ \text{if } |\llbracket 1; k \rrbracket \cap J| \geq 2 \text{ and } I \subsetneq \llbracket 1; k \rrbracket \end{array}}
-\]
-\end{corollary}
-
-\begin{proof}
-It follows directly from the fish condition: if the fish condition is satisfied, as inversions of $\sigma_1$ are included in inversions of $\sigma_2$, we get $j_{k-1},j_k<i_k$ for any $k>1$.
-\end{proof}
-
-
-\Kurt{Maybe through dominance?}
-
-\begin{definition}[Dominance]
-Let $\sigma$ be a sequence of $n$ distinct elements, and $X,Y$, non-overlapping proper subsets of $\sigma$.
-We say the set $X$ dominates $Y$ in $\sigma$ if 
-\begin{align*}
-    \forall k \in [n] , 
-    \left| \sigma_{[k]} \cap Y \right|
-    \leq
-    \left| \sigma_{[k]} \cap X \right|
-\end{align*}
+\begin{definition}[Domination]
+For two non-overlapping proper subsets $X,Y \subsetneq \sigma$ of an ordered partition $\sigma$ with $m$ blocks, we say that the set $X$ \emph{dominates} $Y$ in $\sigma$ if for all $k \in [m]$, we have that~$\left| \sigma_{[k]} \cap X \right| \geq \left| \sigma_{[k]} \cap Y \right|$.
 \end{definition}
-The domination of sets is conserved under deletion of elements in the following situation. 
-\begin{lemma}[Coherent Domination]\label{lem:Coherent Domination}
-Suppose $X$ dominates $Y$ in $\sigma$. 
-Given $x \in X, y\in Y$, let $i_x,i_y$ be their indices in $\sigma$ and define $D(k) :=  \left| \sigma_{[k]} \cap X \right| -  \left| \sigma_{[k]} \cap Y \right|$.
-Then, given $X’ := X\setminus x, Y’:= Y\setminus y$,
-\begin{align*}
-    X' \text{ dominates } Y' \text{ in } \sigma \iff &(1) \text{ $y$ comes before $x$, or}\\
-    &(2) \text{ for all $k$ in the open interval $(i_x,i_y)$, $D(k) > 0$.} 
-\end{align*}
-\end{lemma}
-\begin{proof}
-Immediate from definition.
-\end{proof}
-We can re-characterise membership of the diagonal through domination.
-\begin{eqnarray*}
-    (\sigma,\tau)\in \LAD 
-    & \iff \forall (I,J) \in \LA(n), &\exists k \in [n] , 
-    \left| \sigma_{[k]} \cap I \right|
-    >
-    \left| \sigma_{[k]} \cap J \right| \text{ or } \\
-    && \exists l \in [n] , 
-    \left| \tau_{[l]} \cap I \right|
-    <
-    \left| \tau_{[l]} \cap J \right|  \ . \\
-    (\sigma,\tau) \in \LAD & \iff \not \exists (I,J) \in \LA(n), & J \text{ dominates } I \text{ in } \sigma, \text{ and } I \text{ dominates } J \text{ in } \tau
-\end{eqnarray*}
-Which enables the following characterisation of vertices in the diagonal.
 
-\begin{proposition}\label{prop: LAD Fish Pattern}
-Let $(I_k,J_k):= (\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\})$.
-A pair of permutations $(\sigma,\tau)\in \LAD$ if, and only if, $\forall k,$ $(\sigma,\tau)$ avoids the set of $(k-1)!k!$ different patterns
-\begin{align*}
-    P_k:= \{ (j_1 i_1 j_2 i_2 \cdots j_k i_k,\quad  i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k): i_1 = 1, I = \{i_1,...,i_k\},J = \{j_1,...,j_k\} \}
-\end{align*}
-In particular, for $k=1,2$ the patterns avoided are $(21,12),(2134,4213)$ and $(3124,4312)$.
+The characterization of the $\LA$ diagonal in \cref{p:minimal} can be straightforwardly reformulated through domination. 
+
+\begin{lemma}
+\label{l:LA-domination}
+For any pair of ordered partitions $(\sigma,\tau)$ we have that
+\begin{eqnarray*}
+    (\sigma,\tau) \notin \LAD & \iff \exists (I,J) \in \LA(n), & J \text{ dominates } I \text{ in } \sigma \text{ and } I \text{ dominates } J \text{ in } \tau \ . 
+\end{eqnarray*}
+\end{lemma}
+
+Moreover, as an immediate consequence of the definition, the domination of sets is conserved under deletion of elements in the following situation. 
+For $\sigma$ an ordered partition, and $x\in X$, $y \in Y$, we denote by $i_x,i_y$ the indices of the blocks containing each of them in $\sigma$. 
+
+\begin{lemma}[Coherent domination]
+\label{lem:Coherent Domination}
+Let $X,Y \subsetneq \sigma$ be two non-overlapping proper subsets of an ordered partition $\sigma$, and suppose that $X$ dominates $Y$ in $\sigma$. 
+For any $x\in X$, $y \in Y$, we have that $X\setminus x$ dominates $Y\setminus y$ in $\sigma$ if and only if either
+\begin{enumerate}
+    \item $y$ comes before $x$ in $\sigma$, or 
+    \item for all $k$ in the open interval $(i_x,i_y)$, we have that $\left| \sigma_{[k]} \cap X \right| > \left| \sigma_{[k]} \cap Y \right|$.
+\end{enumerate}
+\end{lemma}
+
+This enables the following characterisation of vertices in the diagonal as pattern-avoiding pairs of permutations.
+
+\begin{proposition}
+\label{prop: LAD Fish Pattern}
+A pair of permutations of is in the $\LA$ diagonal if and only if for any $k\geq 1$ and for any $(I,J) \in \LA(k)$ it avoids the pattern 
+\begin{align}
+    (j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k) \ , \label{eq:pattern}
+\end{align}
+where $I=\{i_1,\dots,i_k\}$, $J=\{j_1,\dots,j_k\}$ and $i_1=\min(I\cup J)$.
 \end{proposition}
 
-\begin{proof}
+\begin{remark}
+    In standardized form, there are $(k-1)!k!$ avoided patterns.
+    For $k=1,2$ they are given by $(21,12),(2134,4213)$ and $(3124,4312)$.
+\end{remark}
 
-Given the coherent/operadic nature of $\LA$ (\cref{lem:operadic-ordering}), $(\sigma,\tau) \in \LAD$ if, and only if, it never fails an $(I,J)$ condition whose standardisation is of the form 
-\begin{align*}
-    (I_k,J_k) := (\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\})
-\end{align*}
-for some $k\geq 1$.
-We first prove that each pair of permutations in $P_k$ fails $(I_k,J_k)$, and does not fail $(I_l,J_l)$ for $l<k$.
-It is clear by construction that each $p\in P_k$ fails $(I_k,J_k)$, as $J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$. 
-Furthermore, each $p$ has no sub-pair of permutations $p'$ which fails $(I_l,J_l)$ for $l<k$.
-In particular, trying to construct such a $p'$ recovers $p$.
-\begin{itemize}
-    \item To possibly fail $(I_l,J_l)$, the pair must have $(j_1 i_1..., ... i_1j_k)$, so we must have $i_1,j_1,j_k$.
-    
-    \item However, we must then dominate $j_1$ with an element of $I$ in $\tau$. 
-    The only possibility is through $i_2$ which itself must be dominated by an element of $J$ in $\sigma$.
-    This leads to a chain of necessary additions $j_1 \implies i_2\implies j_2 \implies i_3 \implies ... \implies i_{k}$. 
-    Which implies that $p'=p$.
-\end{itemize}
-We now prove that $P_k$ are the only pairs of permutations of size $k$ which fail $(I_k,J_k)$, but which do not fail any smaller conditions. 
-We complete this proof in two steps.
-Firstly, we will show that for any such $p=(\sigma,\tau)$, the leftmost $I$ of $\sigma$ is $i_1=1$.
-Then, for $n\geq1$ we will prove that,
+\begin{proof}
+Given the operadic nature of the $\LA$ diagonal (\cref{lem:operadic-ordering}), a pair of permutations $(\sigma,\tau)$ is in~$\LAD$ if and only if it satisfies every $(I,J)$ condition whose standardisation is of the form 
+\begin{align}
+    (I_k,J_k) := (\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\}) \label{eq:standard}
+\end{align}
+for some $k\geq 1$. Thus, according to \cref{l:LA-domination}, we have that $(\sigma,\tau) \notin \LAD$ if and only if there is an $(I,J)$ of standard form (\ref{eq:standard}) sucht that $J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$.
+It remains to show this last condition is equivalent to the patterns (\ref{eq:pattern}).
+
+It is clear that if a pair of permutations $(\sigma,\tau)$ contains a pattern, then the associated $(I,J)$ satisfies the domination condition; thus we just need to show the reverse implication. 
+We proceed by induction on the cardinality $|I|=|J|$. 
+The case of cardinality $1$ is clear. 
+Now suppose that for all $(I,J)$ of size $|I|=|J|\leq m-1$ with standard form (\ref{eq:standard}), we have that if~$J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$, then $(\sigma,\tau)$ contains a pattern of the form~(\ref{eq:pattern}).
+
+We need to show that this is still true for the pairs $(I,J)$ of size $|I|=|J|=m$.
+Let $(\sigma,\tau)$ be permutations, and let $(I,J)$ be such a pair.
+If there exists $(I',J')$ of cardinality $|I'|=|J'|<m$ satisfying the domination condition, we can conclude by the induction hypothesis. 
+Let us consider the case where such a $(I',J')$ does not exist, and suppose that $J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$.
+We want to show that $(\sigma,\tau)$ contains a pattern of the form~(\ref{eq:pattern}) made from the pair $(I,J)$.
+
+Firstly, suppose that the leftmost element $i_1$ of $I$ in $\sigma$ is not $\min(I\cup J)$, and let us write $j_1$ for the leftmost element of $J$ in $\tau$.
+Since the pair $(I,J)$ is of standard form (\ref{eq:standard}), so is the pair $(I',J'):=(I_k\setminus \{i_1\}, J_k \setminus \{j_1\})$, and one can check using both cases of \cref{lem:Coherent Domination} that $J'$ dominates $I'$ in $\sigma$, and $I'$ dominates $J'$ in $\tau$.
+We can thus conclude with the induction hypothesis. 
+
+Secondly, suppose that the leftmost element $i_1$ of $I$ in $\sigma$ is $\min(I\cup J)$.
+Then, for $n\geq1$ we prove that,
 \begin{enumerate}[(a)]
-    \item If $\sigma = j_1 i_1 j_2 i_2 ... j_{n-1} i_{n-1} w i_{n} w'$, $\tau = i_2 j_1 i_3 j_2 ... i_{n}j_{n-1}w''$, and $j_n$ is the leftmost $J\setminus \{j_1,...,j_{n-1}\}$ in $\tau$, then $w = j_n$.
+    \item If $\sigma = j_1 i_1 j_2 i_2 ... j_{n-1} i_{n-1} w i_{n} w'$, $\tau = i_2 j_1 i_3 j_2 ... i_{n}j_{n-1}w''$, and $j_n$ is the leftmost $J\setminus \{j_1,...,j_{n-1}\}$ in $\tau$, then either we have $w = j_n$, or we can conclude with the induction hypothesis.
     \item If $\sigma = j_1 i_1 j_2 i_2 ... j_{n-1} i_{n-1} w''$, $\tau = i_2 j_1 i_3 j_2 ... i_{n-1}j_{n-2} w j_{n-1} w''$, and $i_n$ is the leftmost $I\setminus \{i_1,...,i_{n-1}\}$ in $\sigma$, then $w = i_n$.
 \end{enumerate}
-Consequently, as the leftmost $I$ of $\sigma$ is $1$.
-We can inductively generate the entire permutation, determining $j_1$ via $(a)$, then $i_2$ via $(b)$, then $j_2$ via $(a)$ and so on.
-This inductive process fully generates $\sigma$, and places all elements in $\tau$ except $i_1$, with a final known expression  $\tau = i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} w j_k w''$.
-However, as $j_k$ must be dominated by an element of $I$, this forces $w = i_1$ and $w'' =\emptyset$, completing the proof.
-\\\\
-We now prove the requisite steps.
-Firstly, let $i_1$ be the leftmost element of $I$, and suppose that $i_1\neq 1$. 
-Let $j_1$ be the leftmost element of $J$ in $\tau$, and define $(I',J'):=(I_k\setminus \{i_1\}, J_k \setminus \{j_1\})$.
-As $i_1, j_1$ are the leftmost elements of $\sigma,\tau$ respectively, one can check using both cases of \cref{lem:Coherent Domination}, that $J'$ dominates $I'$ in $\sigma$, and $I'$ dominates $J'$ in $\tau$.
-\\\\
-Finally, we prove $(a)$, the proof of $(b)$ proceeds similarly. 
+We prove $(a)$, the proof of $(b)$ proceeds similarly. 
 Let $j_n$ be the leftmost element of $J\setminus \{j_1,...,j_{n-1} \}$ in $\tau$.
 Suppose that $w\neq j_n$, then either
 \begin{enumerate}
@@ -2553,7 +2489,16 @@ In case $(a)$, we may apply condition $(2)$ of \cref{lem:Coherent Domination}.
 In case $(b)$, either $i_n$ comes before $j_n$, in which case we meet condition $(1)$ of \cref{lem:Coherent Domination}, or $j_n$ comes before $i_n$.
 If $j_n$ comes before $i_n$, then as $i_n$ is the leftmost element of $I\setminus \{i_1,...,i_{n-1} \}$ in $\sigma$, this implies condition $(2)$ of \cref{lem:Coherent Domination} holds.
 
+
+Consequently, as the leftmost $I$ of $\sigma$ is $1$.
+We can inductively generate the entire permutation, determining $j_1$ via $(a)$, then $i_2$ via $(b)$, then $j_2$ via $(a)$ and so on.
+This inductive process fully generates $\sigma$, and places all elements in $\tau$ except $i_1$, with a final known expression  $\tau = i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} w j_k w''$.
+However, as $j_k$ must be dominated by an element of $I$, this forces $w = i_1$ and $w'' =\emptyset$, completing the proof.
 \end{proof}
+
+\begin{remark}
+    These are a subset of intervals of the weak Bruhat order...
+\end{remark}
 
 All the operadic diagonals admit similar characterisations. 
 In particular, the vertices of the $\SU$ diagonal are characterised as follows.
@@ -2570,6 +2515,20 @@ In particular, for $k=1,2$ the patterns avoided are $(21,12), (1243,2431)$ and $
 We apply either of the face poset isomorphisms $rs \times rs,t(r\times r):\LAD \to \SUD$ (\cref{rem:Alternate Isomorphism}).
 By necessity, both isomorphisms produce the same set of patterns, and map $i_1=1$ in the $\LAD$ patterns of \cref{prop: LAD Fish Pattern} to $j_k = 2k$ in these $\SUD$ patterns.
 \end{proof}
+
+\begin{corollary} For any pair of permutations $(\sigma_1, \sigma_2$, there exists $(I,J) \in D(n)$ such that $((\sigma_1, \sigma_2),(I,J))$ satisfies the diagonal condition if and only if there exists $(I',J') \in E(m)$, $m<n$ such that $((\sigma_1, \sigma_2),(I',J'))$ satisfies the fish condition, with 
+\[
+E(m)=\set{(I,J)\in D(m)}{\begin{array}{l} \min(J)<\min(I-\min(I)), \\ |\llbracket 1; k \rrbracket \cap J| > |\llbracket 1; k \rrbracket \cap I| \\ \text{if } |\llbracket 1; k \rrbracket \cap J| \geq 2 \text{ and } I \subsetneq \llbracket 1; k \rrbracket \end{array}}
+\]
+\end{corollary}
+
+\begin{proof}
+It follows directly from the fish condition: if the fish condition is satisfied, as inversions of $\sigma_1$ are included in inversions of $\sigma_2$, we get $j_{k-1},j_k<i_k$ for any $k>1$.
+\end{proof}
+
+\begin{remark}
+    Fish condition
+\end{remark}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
